--- a/views/pages/admin/invoice/list.ejs
+++ b/views/pages/admin/invoice/list.ejs
@@ -59,7 +59,7 @@
                     </td>
                     <td><%= (invoice.courierNo) ? invoice.courierNo : '-' %></td>
                     <td>
-                      <button class="btn btn-primary btn-view-invoice-package btn-round float-right ml-md-auto" data-toggle="modal"
+                      <button class="btn btn-primary btn-view-invoice-package btn-round float-right ml-md-auto" data-backdrop="static" data-toggle="modal"
                         data-original-title="View Packages" data-id="<%=invoice._id%>" data-target="#invoice-packages">View</button>
                     </td>
                     <td><a href="JavaScript:Void(0);"
