--- a/views/pages/customer/awb/preview.ejs
+++ b/views/pages/customer/awb/preview.ejs
@@ -134,6 +134,7 @@
                               <td class="text-center">
                                 <a
                                     class="btn btn-link btn-primary btn-print-pkg"
+                                    data-backdrop="static"
                                     data-toggle="modal"
                                     data-id="<%=package._id%>"
                                     data-original-title="Print Label"
