--- a/views/pages/customer/no-docs/list.ejs
+++ b/views/pages/customer/no-docs/list.ejs
@@ -48,6 +48,7 @@
                 <a 
                 class="btn btn-link btn-primary btn-print-awb" 
                 data-toggle="modal" 
+                data-backdrop="static"
                 data-id="<%=awb.awbId._id%>"
                 data-target="#print-popup"><i class="fa fa-print"></i> </a>
               </td>
