--- a/views/pages/fleet/compartment/list.ejs
+++ b/views/pages/fleet/compartment/list.ejs
@@ -30,7 +30,7 @@
               <td><%=compart.volume %></td>
               <td>
                 <!-- temporary commenting the code -->
-                <a class="btn btn-link btn-primary btn-edit-compartment p-1" data-toggle="modal" data-id="<%=compart.id%>"
+                <a class="btn btn-link btn-primary btn-edit-compartment p-1" data-backdrop="static" data-toggle="modal" data-id="<%=compart.id%>"
                   data-original-title="Edit Compartmentasa" data-target="#edit-compartment"><i class="fa fa-pen"></i></a>
 
                 <a class='rm-compartment p-1 btn btn-link btn-danger' data-id='<%=compart.id%>' href="#"><i class='fa fa-trash'></i></a>
