--- a/views/pages/warehouse/delivery/list.ejs
+++ b/views/pages/warehouse/delivery/list.ejs
@@ -52,7 +52,7 @@
                                     </td>
                                     <td class="text-center">
                                         <a href='manage/<%=delivery.id%>/get' class="btn btn-link btn-primary px-2" data-toggle="tooltip" data-original-title="Delivery Packages"> <i class="fa fa-box-open"></i> </a>
-                                        <a class="btn btn-link btn-primary btn-close-delivery px-2 close-deliveryy" data-toggle="modal" data-id="<%=delivery.id%>"> <i class="fa fa-check-circle"></i>
+                                        <a class="btn btn-link btn-primary btn-close-delivery px-2 close-deliveryy" data-backdrop="static" data-toggle="modal" data-id="<%=delivery.id%>"> <i class="fa fa-check-circle"></i>
                                         </a>
                                     </td>
                                 </tr>
