--- a/views/pages/warehouse/manifest/list.ejs
+++ b/views/pages/warehouse/manifest/list.ejs
@@ -45,6 +45,7 @@
               <td class="text-center">
                 <a 
                 data-toggle="modal"
+                data-backdrop="static"
                 data-id="<%=manifest.id%>"
                 data-target="#change-manifest-status"
                 class="btn btn-link btn-primary btn-manifest-status px-3"><i class="fa fa-edit"></i></a> 
