--- a/views/pages/warehouse/package/list-all.ejs
+++ b/views/pages/warehouse/package/list-all.ejs
@@ -25,6 +25,7 @@
         <button
         id="add-to-cube-button"
         data-toggle="modal"
+        data-backdrop="static"
         data-target="#add-to-cube-modal"
         class="btn btn-primary btn-round float-right mr-2 ml-md-auto"
         >
@@ -33,6 +34,7 @@
         <button
         id="add-to-nodoc-button"
         data-toggle="modal"
+        data-backdrop="static"
         data-target="#add-to-nodoc-modal"
         class="btn btn-primary btn-round float-right mr-2 ml-md-auto"
         >
@@ -42,6 +44,7 @@
           <button
             id="add-to-delivery-button"
             data-toggle="modal"
+            data-backdrop="static"
             data-target="#add-to-delivery-modal"
             class="btn btn-primary btn-round float-right ml-md-auto"
           >
@@ -52,6 +55,7 @@
           <button
             id="add-to-manifest-button"
             data-toggle="modal"
+            data-backdrop="static"
             data-target="#add-to-manifest-modal"
             class="btn btn-primary btn-round float-right ml-md-auto"
           >
