--- a/views/pages/warehouse/snapshot/awb/list.ejs
+++ b/views/pages/warehouse/snapshot/awb/list.ejs
@@ -96,7 +96,7 @@ var endate = new Date();
                   <td><%=awb.packages ? awb.packages.length : 'no-pkg' %></td>
                   <td>
                     <button class="btn btn-primary btn-view-more-awb btn-round float-right ml-md-auto"
-                      data-toggle="modal" data-original-title="View More Packages" data-id="<%=awb._id%>"
+                      data-toggle="modal" data-backdrop="static" data-original-title="View More Packages" data-id="<%=awb._id%>"
                       data-target="#more-awb-details">View</button>
                   </td>
                   <!-- <td><% if(awb.invoice) { %>
