--- a/views/pages/warehouse/awb/create.ejs
+++ b/views/pages/warehouse/awb/create.ejs
@@ -7,7 +7,7 @@
         <div class="card-header">
           <h3>Create New AirWay Bill
             <div class="pull-right">
-              <a href="#" data-toggle="modal" data-target="#add-additional-invoices-modal" class="btn btn-info btn-round  ml-auto mr-5" >
+              <a href="#" data-toggle="modal" data-backdrop="static" data-target="#add-additional-invoices-modal" class="btn btn-info btn-round  ml-auto mr-5" >
                 Add Additional Invoices
               </a>
             </div>
@@ -47,7 +47,7 @@
                   </select>
                 </div>
                 <div class="input-group-append">
-                  <a href="#" data-toggle="modal" data-target="#add-shipper-popup" >
+                  <a href="#" data-toggle="modal" data-target="#add-shipper-popup" data-backdrop="static">
                     <span class="input-group-text">+</span></a>
                 </div>
               </div>
@@ -62,7 +62,7 @@
                   </select>
                 </div>
                 <div class="input-group-append">
-                  <a href="#" data-toggle="modal" data-target="#add-carrier-popup">
+                  <a href="#" data-toggle="modal" data-target="#add-carrier-popup" data-backdrop="static">
                     <span class="input-group-text">+</span></a>
                 </div>
               </div>
@@ -190,7 +190,7 @@
           <div class="d-flex mr-1">
             <h3 class="card-title text-muted">AWB Purchase Order List</h3>
             <a href="#" data-toggle="modal" data-target="#add-purchase-order-item-modal"
-              class="btn btn-info btn-round ml-auto mr-5">Add P.O</a>
+              class="btn btn-info btn-round ml-auto mr-5" data-backdrop="static">Add P.O</a>
           </div>
           <div class="row">
             <div class="table-responsive mx-5 mt-3">
@@ -322,7 +322,7 @@
               <span class="input-group-text">Refresh</span></a>
           </div>
           <div class="input-group-append col-lg-1">
-            <a href="#" data-toggle="modal" data-target="#add-barcode-popup" onclick="closeAddPackage()">
+            <a href="#" data-toggle="modal" data-target="#add-barcode-popup" onclick="closeAddPackage()" data-backdrop="static">
               <span class="input-group-text">+</span></a>
           </div>
         </div>
