--- a/views/pages/warehouse/awb/edit.ejs
+++ b/views/pages/warehouse/awb/edit.ejs
@@ -7,7 +7,7 @@
         <div class="card-header">
             <h3><%= title %>
                 <div class="pull-right">
-                  <a href="#" data-toggle="modal" data-target="#add-additional-invoices-modal" class="btn btn-info btn-round  ml-auto mr-5" >
+                  <a href="#" data-toggle="modal" data-backdrop="static" data-target="#add-additional-invoices-modal" class="btn btn-info btn-round  ml-auto mr-5" >
                     Add Additional Invoices
                   </a>
                 </div>
@@ -31,7 +31,7 @@
                   </select>
                 </div>
                 <div class="input-group-append">
-                  <a href="#" data-toggle="modal" data-target="#add-customer-popup">
+                  <a href="#" data-toggle="modal" data-backdrop="static" data-target="#add-customer-popup">
                     <span class="input-group-text">+</span></a>
                 </div>
               </div>
@@ -47,7 +47,7 @@
                   </select>
                 </div>
                 <div class="input-group-append">
-                  <a href="#" data-toggle="modal" data-target="#add-shipper-popup">
+                  <a href="#" data-toggle="modal" data-backdrop="static" data-target="#add-shipper-popup">
                     <span class="input-group-text">+</span></a>
                 </div>
               </div>
@@ -63,7 +63,7 @@
                   </select>
                 </div>
                 <div class="input-group-append">
-                  <a href="#" data-toggle="modal" data-target="#add-carrier-popup">
+                  <a href="#" data-toggle="modal" data-backdrop="static" data-target="#add-carrier-popup">
                     <span class="input-group-text">+</span></a>
                 </div>
               </div>
@@ -193,7 +193,7 @@
           <div class="d-flex mr-1">
             <h3 class="card-title text-muted">AWB Purchase Order List</h3>
             <a href="/api/printer/pdf/generate/awb-purchase-order/<%=awb._id%>" class="btn btn-info btn-round ml-auto mr-2 " >Print P.O</a>
-            <a href="#" data-toggle="modal" data-target="#add-purchase-order-item-modal"
+            <a href="#" data-toggle="modal" data-backdrop="static" data-target="#add-purchase-order-item-modal"
               class="btn btn-info btn-round mr-5">Add P.O</a>
           </div>
           <div class="row">
@@ -357,7 +357,7 @@
               <span class="input-group-text">Refresh</span></a>
           </div>
           <div class="input-group-append col-lg-1">
-            <a href="#" data-toggle="modal" data-target="#add-barcode-popup" onclick="closeAddPackage()">
+            <a href="#" data-toggle="modal" data-backdrop="static" data-target="#add-barcode-popup" onclick="closeAddPackage()">
               <span class="input-group-text">+</span></a>
           </div>
         </div>
@@ -608,9 +608,11 @@
               <div class="form-group form-show-validation row">
                 <label for="companyId" class="col-lg-4 col-md-4 col-sm-4 mt-sm-2 text-right">Company </label>
                 <div class="col-lg-8 col-md-8 col-sm-8">
-                  <select id="companyId" name="companyId" class="form-control" required>
-                    <option value='9to5'>9to5</option>
-                    <option value='pmb'>Post Boxes</option>
+                  <select id="company" name="company" class="form-control" required>
+                    <% companies.forEach(company => { %>
+                      <option value="<%= company._id%>"> <%= company.name %>
+                      </option>
+                      <% }) %>
                   </select>
                 </div>
               </div>
