--- a/views/pages/warehouse/awbprice/list-all.ejs
+++ b/views/pages/warehouse/awbprice/list-all.ejs
@@ -70,7 +70,7 @@
                 <td><%= (awb.carrier && awb.carrier.name)?awb.carrier.name:'' %></td>
                 <td><%= awb.awbPriceLabel || ''%></td>
 
-                <td><a class="btn btn-link btn-primary btn-edit-pricelabel" data-toggle="modal" data-id="<%=awb._id%>"
+                <td><a class="btn btn-link btn-primary btn-edit-pricelabel" data-backdrop="static" data-toggle="modal" data-id="<%=awb._id%>"
                     data-original-title="Add Price" data-target="#pricelabel-popup"><i class="fa fa-edit"></i></a>
                 </td>
                 <% let ifNotPriceLabel = 'ifNotPriceLabel'+ awb._id %>
