--- a/views/shared/__template.ejs
+++ b/views/shared/__template.ejs
@@ -142,6 +142,13 @@
 
 	<!-- Datatables -->
 	<script src="/assets/js/plugin/datatables/datatables.min.js"></script>
+	<script src="https://cdn.datatables.net/buttons/1.6.5/js/dataTables.buttons.min.js"></script>
+	<script src="https://cdn.datatables.net/buttons/1.6.5/js/buttons.flash.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.1.3/jszip.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/pdfmake.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/vfs_fonts.js"></script>
+	<script src="https://cdn.datatables.net/buttons/1.6.5/js/buttons.html5.min.js"></script>
+	<script src="https://cdn.datatables.net/buttons/1.6.5/js/buttons.print.min.js"></script>
 
 	<!-- Bootstrap Notify -->
 	<script src="/assets/js/plugin/bootstrap-notify/bootstrap-notify.min.js"></script>
