--- a/views/shared/__sidebar.ejs
+++ b/views/shared/__sidebar.ejs
@@ -38,12 +38,12 @@
 					</a>
 				</li>
 				<li class="nav-item <% if (page.includes('/fleet/')) { %> active <% } %>">
-					<a data-toggle="collapse" href="#fleet">
+					<a data-toggle="collapse" href="#reports">
 						<i class="fa fa-file"></i>
 						<p>Reports</p>
 						<span class="caret"></span>
 					</a>
-					<div class="collapse <% if (page.includes('/reports/all-awb/status')) { %> show <% } %>" id="fleet">
+					<div class="collapse <% if (page.includes('/reports/all-awb/status')) { %> show <% } %>" id="reports">
 						<ul class="nav nav-collapse">
 							<li <% if (page.includes('/reports/all-awb/status')) { %> class="active" <% } %>>
 								<a href="/reports/all-awb/status">
