--- a/views/pages/warehouse/cube/detail.ejs
+++ b/views/pages/warehouse/cube/detail.ejs
@@ -78,7 +78,7 @@
                   <td><%= package.volumetricWeight.toFixed(2) %> vlbs</td>
                   <td><%= package.dimensions %></td>
                   <td>
-                    <a class="btn btn-link btn-danger btn-rm-pkg-awb p-1" title="Delete" data-id="<%=package._id%>" data-toggle="modal" data-target="#confirmPkgDel"><i class="fa fa-trash"></i></a>
+                    <a class="btn btn-link btn-danger btn-rm-pkg-awb p-1" title="Delete" data-id="<%=package._id%>" data-toggle="modal" data-backdrop="static" data-target="#confirmPkgDel"><i class="fa fa-trash"></i></a>
                   </td>
                 </tr>
                 <% }) %>
