--- a/views/pages/fleet/compartment/list.ejs
+++ b/views/pages/fleet/compartment/list.ejs
@@ -5,7 +5,7 @@
     <div class="card">
       <div class="card-header d-flex align-items-left align-items-md-center flex-column flex-md-row">
         <div class="card-title">Plane-<%= plane.tail_number %> Compartments</div>
-        <a href='#' id='show-add' data-target="#add-compartment" data-toggle='modal'
+        <a href='#' id='show-add' data-target="#add-compartment" data-toggle='modal' data-backdrop='static'
           class='btn btn-primary btn-round ml-md-auto float-right'>Add Compartment</a>
       </div>
       <div id="myLoader"><img src="/img/preloader.gif"></div>
