--- a/views/pages/warehouse/deliveries.ejs
+++ b/views/pages/warehouse/deliveries.ejs
@@ -21,7 +21,7 @@
 
                     </ul>
                     <div class='row'>
-                        <div class='col-md-12'><button class='btn btn-info pull-right' data-toggle='modal' data-target='#addDelivery'>Create Delivery </button></div>
+                        <div class='col-md-12'><button class='btn btn-info pull-right' data-toggle='modal' data-backdrop='static' data-target='#addDelivery'>Create Delivery </button></div>
 
                     </div>
 
