--- a/views/pages/warehouse/delivery/list.ejs
+++ b/views/pages/warehouse/delivery/list.ejs
@@ -7,7 +7,7 @@
                     <h3 class="card-title">
                         <%=title%>
                     </h3>
-                    <a href='create' class='btn btn-primary btn-round float-right ml-md-auto text-white' data-toggle='modal' data-target='#addDelivery'>Create Delivery</a>
+                    <a href='create' class='btn btn-primary btn-round float-right ml-md-auto text-white' data-toggle='modal' data-backdrop='static' data-target='#addDelivery'>Create Delivery</a>
                 </div>
                 <div id="myLoader"><img src="/img/preloader.gif"></div>
                 <div class="card-body daterangepickerbody">
