--- a/views/pages/warehouse/hazmat/list.ejs
+++ b/views/pages/warehouse/hazmat/list.ejs
@@ -4,7 +4,7 @@
     <div class="card">
       <div class="card-header d-flex align-items-left align-items-md-center flex-column flex-md-row">
         <div class="card-title"><%=title%></div>
-        <a href='#' data-target="#add-hazmat" data-toggle='modal'
+        <a href='#' data-target="#add-hazmat" data-toggle='modal' data-backdrop='static'
           class='btn btn-primary btn-round ml-md-auto float-right'>Add New HAZMAT Class</a>
       </div>
       <div id="myLoader"><img src="/img/preloader.gif"></div>
@@ -13,7 +13,7 @@
           <table id="hazmatTable" class="display table dateRangeFilterTable table-striped table-hover">
             <thead>
               <tr>
-                <th>ID</th>
+                <!-- <th>ID</th> -->
                 <th>Date Created</th>
                 <th>Name</th>
                 <th>Description</th>
@@ -23,12 +23,12 @@
             <tbody>
               <% hazmats.forEach(function(hazmat){ %>
               <tr data-record="<%= hazmat.id %>">
-                <td><%=hazmat.id%></td>
+                <!-- <td><%=hazmat.id%></td> -->
                 <td><%=helpers.formatDate(hazmat.createdAt)%></td>
                 <td><strong><%=hazmat.name%></strong></td>
                 <td><%=hazmat.description%></td>
                 <td>
-                  <a href='#' data-id='<%=hazmat.id%>' data-target="#edit-hazmat" data-toggle='modal'
+                  <a href='#' data-id='<%=hazmat.id%>' data-target="#edit-hazmat" data-toggle='modal' data-backdrop='static'
                     class='btn-edit-hazmat mx-3'><i class="fas fa-pen"></i></a>
                   <!-- temporary commenting the code -->
                   <!-- <a href='#' class='rm-hazmat ml-3' data-id='<%=hazmat.id%>'><i class="fas fa-trash"></i></a> -->
