--- a/views/pages/warehouse/list-manifest.ejs
+++ b/views/pages/warehouse/list-manifest.ejs
@@ -36,7 +36,7 @@
                                     class='btn btn-sm btn-primary'>Manage</a>
                                 <%if (manifest.stageId ==1) {%>
                                 <button class='btn btn-danger btn-sm rm-manifest-launch' data-id='<%=manifest.mid%>'
-                                    data-target='#rm-manifest-modal' data-toggle='modal'>Delete</button>
+                                    data-target='#rm-manifest-modal' data-toggle='modal' data-backdrop='static'>Delete</button>
                                 <%}%>
                         </td>
                     </tr>
