--- a/views/pages/warehouse/awbprice/list-all.ejs
+++ b/views/pages/warehouse/awbprice/list-all.ejs
@@ -227,6 +227,12 @@
                       <!-- <span id="totalWetSpan"></span> -->
                     </div>
                   </div>
+                  <div class="form-group form-show-validation row">
+                    <label for="Proof-Of-Purchase" class="col-lg-4 col-md-4 col-sm-4 mt-sm-2 text-right">Proof Of <br>Purchase </label>
+                    <div class="col-lg-8 col-md-8 col-sm-8">
+                      <input type="number" class="form-control" disabled="true" id="ProofOfPurchase" name="ProofOfPurchase" placeholder="Proof Of Purchase">
+                    </div>
+                  </div>
                 </div>
                 <div class="col-md-6">
                   <div class="form-group form-show-validation row">
@@ -302,11 +308,11 @@
                   <div class="form-group form-show-validation row">
                     <div class="col-lg-7 col-md-8 col-sm-8 d-flex flex-md-row">
                       <div class="custom-control custom-checkbox">
-                        <input type="checkbox" class="custom-control-input" id="Sed">
+                        <input type="checkbox" disabled="true" class="custom-control-input" id="Sed">
                         <label class="custom-control-label" for="Sed">Sed</label>
                       </div>
                       <div class="col-lg-7 col-md-8 col-sm-8">
-                        <input type="number" class="form-control form-control-sm text-right" id="SedVal" />
+                        <input type="number" disabled="true" class="form-control form-control-sm text-right" id="SedVal" />
                       </div>
                     </div>
                   </div>
@@ -330,13 +336,13 @@
                   <div class="form-group form-show-validation row">
                     <label for="Pickup" class="col-lg-3 col-md-4 col-sm-4 mt-sm-2 text-right">Pickup </label>
                     <div class="col-lg-7 col-md-8 col-sm-8">
-                      <input type="number" class="form-control" id="Pickup" name="Pickup" placeholder="Pickup">
+                      <input type="number" class="form-control" disabled="true" id="Pickup" name="Pickup" placeholder="Pickup">
                     </div>
                   </div>
                   <div class="form-group form-show-validation row">
                     <label for="Hazmat" class="col-lg-3 col-md-4 col-sm-4 mt-sm-2 text-right">Hazmat </label>
                     <div class="col-lg-7 col-md-8 col-sm-8">
-                      <input type="number" class="form-control" id="Hazmat" name="Hazmat" placeholder="Hazmat">
+                      <input type="number" class="form-control" disabled="true" id="Hazmat" name="Hazmat" placeholder="Hazmat">
                     </div>
                   </div>
                 </div>
