--- a/views/pages/warehouse/service-type/edit.ejs
+++ b/views/pages/warehouse/service-type/edit.ejs
@@ -23,6 +23,18 @@
                 value="<%=serviceType.amount%>">
             </div>
           </div>
+          <div class="form-group form-show-validation row">
+            <label for="service-type" class="col-lg-3 col-md-3 col-sm-4 mt-sm-2 text-right">Service Type</label>
+            <div class="col-lg-4 col-md-9 col-sm-8">
+              <select id="type" name="type" class='form-control' style='width:90%;'>
+                <option></option>
+                <option value="Hazmat" <% if(serviceType.type == 'Hazmat') { %> selected <% } %>>Hazmat</option>
+                <option value="Sed" <% if(serviceType.type == 'Sed') { %> selected <% } %>>Sed</option>
+                <option value="Proof Of Purchase" <% if(serviceType.type == 'Proof Of Purchase') { %> selected <% } %>>Proof Of Purchase</option>
+                <option value="Pickup" <% if(serviceType.type == 'Pickup') { %> selected <% } %>>Pickup</option>
+              </select>
+            </div>
+          </div>
         </div>
         <div class="card-action">
           <button type="submit" class="btn btn-primary">Update</button>
