awb history search

--- a/views/pages/warehouse/delivery/preview.ejs
+++ b/views/pages/warehouse/delivery/preview.ejs
@@ -32,7 +32,7 @@
                     </div>
                     <div class="separator-solid"></div>
                     <h3 class="card-title text-muted">Packages</h3>
-                    <div class="mt-3 daterangepickerbody">
+                    <div class="mt-3">
                         <div class="table-responsive">
                         <table class="display table table-striped table-hover dateRangeFilterTable  dataTable delivery-package-table">
                             <thead>
