--- a/views/pages/warehouse/manifest/preview.ejs
+++ b/views/pages/warehouse/manifest/preview.ejs
@@ -113,7 +113,7 @@
                 <div class="d-flex">
                     <h3 class="card-title text-muted package-info">Data Entry ( Weight : <span id="lbs-data-entry">10</span> lbs / <span id="vlbs-data-entry"></span> vlbs )</h3>
                 </div>
-                <div class='row mt-3 daterangepickerbody'>
+                <div class='row mt-3'>
                     <div class='col-md-12 table-responsive'>
                         <table id='packageTable' class='display dateRangeFilterTable table table-striped table-hover w-100'>
                             <thead>
@@ -174,7 +174,7 @@
                                 </tr>
                                 <% }) %>
                             </tbody>
-                            <tbody>
+                            <!--<tbody>
                                 <tr>
                                     <td></td>
                                     <td><strong>Total Weight</strong></td>
@@ -182,7 +182,7 @@
                                     <td></td>
                                     <td><strong>Total Volumetric Weight</strong></td>
                                     <td><strong id="vlsweight"><%= volumetricWeight.toFixed(2)%></strong> vlbs</td>
-                                </tr>
+                                </tr>-->
                             </tbody>
                         </table>
                     </div>
