--- a/views/shared/__sidebar.ejs
+++ b/views/shared/__sidebar.ejs
@@ -37,7 +37,7 @@
 						<p>Reports </p>
 					</a>
 				</li>
-				<li class="nav-item <% if (page.includes('/fleet/')) { %> active <% } %>">
+				<!--<li class="nav-item <% if (page.includes('/fleet/')) { %> active <% } %>">
 					<a data-toggle="collapse" href="#reports">
 						<i class="fa fa-file"></i>
 						<p>Reports</p>
@@ -58,7 +58,7 @@
 							
 						</ul>
 					</div>
-				</li>
+				</li>-->
 				<% } %>
 				<% if (user.roles[0].type == "Customers") { %>
 				<li class="nav-item <% if (page.includes('/dashboard')) { %> active <% } %>">
